--- a/pasajeros.html
+++ b/pasajeros.html
@@ -8,8 +8,12 @@
 <body>
     <h1>Registro de Pasajeros</h1>
 
-    <label for="nombre">Nombres Completo:</label>
+    <label for="nombre">Nombre:</label>
     <input type="text" id="nombre" name="nombre"/>
+    <br>
+
+    <label for="apellido">Apellido:</label>
+    <input type="text" id="apellido" name="apellido"/>
     <br>
 
     <label for="npasaporte">Número de Pasaporte:</label>
@@ -18,10 +22,6 @@
 
     <label for="fnacimiento">Fecha de Nacimiento:</label>
     <input type="datetime" id="fnacimiento" name="fnacimiento"/>
-    <br>
-
-    <label for="nacionalidad">Nacionalidad:</label>
-    <input type="text" id="nacionalidad" name="nacionalidad"/>
     <br>
 
     <label for="genero">Genero:</label>
@@ -48,41 +48,8 @@
     <input type="text" id="cemergencia" name="cemergencia" />
     <br>
 
-    <label for="p_asiento">Preferencia de Asiento:</label>
-    <input type="button" id="p_asiento" name="p_asiento" />
-    <br>
-
-    <label for="requisito">Requisitos Especiales:</label>
-    <input type="text" id="requisito" name="requisito" />
-    <br>
-
-    <label for="nvuelos">Números de Vuelos:</label>
-    <input type="number" id="nvuelos" name="nvuelos" />
-    <br>
-
-    <label for="f_horavuelo">Fecha y Hora de Vuelo:</label>
-    <input type="datetime-local" id="f_horavuelo" name="f_horavuelo" />
-    <br>
-
-    <label for="destino">Destino:</label>
-    <input type="text" id="destino" name="destino" />
-    <br>
-
-    <label for="origen">Origen:</label>
-    <input type="text" id="origen" name="origen" />
-    <br>
-
-    <label for="clasevuelo">Clase de Vuelo:</label>
-    <input type="text" id="clasevuelo" name="clasevuelo" />
-    <br>
-
-    <label for="equipaje">Equipaje:</label>
-    <input type="text" id="equipaje" name="equipaje" />
-    <br><br>
-
-    <button onclick="Enviar()">Enviar</button>
-    <button onclick="Limpiar()">Limpiar</button>
-    <button onclick="Validar()">Validar</button>
+    <button onclick="Guardar()">Guardar</button>
+    <button onclick="Cancelar()">Cancelar</button>
 
 </body>
 </html>
