Agregar los datos en vuelo, igual necesito mejorar el estilo y el java

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sistema de Gestión de Vuelos</title>
-    <link rel="stylesheet" href="css.css">
+    <link rel="stylesheet" href="CSS/estilos.css">
 </head>
 <body>
     <header>
@@ -65,6 +65,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
     <!-- JavaScript -->
-    <script src="script.js"></script>
+    <script src="JS/scritp.js"></script>
 </body>
 </html>
