Cambios en el index

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
         <h1>SistemaAéreo</h1>
         <p>Bienvenido al sistema de gestión de ventas de boletos aéreos</p>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     </header>
 
     <main>
@@ -25,11 +26,11 @@
                     <span>Gestión de Pasajeros</span>
                 </a>
                 <a href="aerolineas.html" class="action-card">
-                    <i class="fas fa-ticket-alt"></i>
+                    <i class="fas fa-headset"></i>
                     <span>Gestión de Aerolíneas</span>
                 </a>
                 <a href="venta_boletos.html" class="action-card">
-                    <i class="fas fa-user-tie"></i>
+                    <i class="fas fa-ticket-alt"></i>
                     <span>Venta de Boletos</span>
                 </a>
             </div>
@@ -61,9 +62,7 @@
         <p>Versión 1.0.0</p>
     </footer>
 
-    <!-- Font Awesome para iconos -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    
+
     <!-- JavaScript -->
     <script src="JS/scritp.js"></script>
 </body>
