--- a/vuelos.html
+++ b/vuelos.html
@@ -2,53 +2,64 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Gestión de Vuelos</title>
-  <style>
-    body { font-family: Arial; padding: 20px; }
-    form, table { margin-top: 20px; }
-    input, select, button { margin: 5px; padding: 8px; }
-    table { width: 100%; border-collapse: collapse; }
-    th, td { border: 1px solid #ccc; padding: 8px; }
-  </style>
+  <link rel="stylesheet" href="CSS/estilos.css">
 </head>
+
 <body>
 
-  <h1>Gestión de Vuelos</h1>
+  <header>
+    <h1>Gestión de Vuelos</h1>
+    <p>Sistema de administración de vuelos</p>
+  </header>
 
-  <form id="formVuelo">
-    <input type="hidden" id="indexEditar" />
-    <input type="text" id="numero" placeholder="Número de vuelo" required />
-    <input type="text" id="origen" placeholder="Origen" required />
-    <input type="text" id="destino" placeholder="Destino" required />
-    <input type="date" id="fechaSalida" required />
-    <input type="time" id="horaSalida" required />
-    <input type="date" id="fechaLlegada" required />
-    <input type="time" id="horaLlegada" required />
-    <input type="text" id="aerolinea" placeholder="Aerolínea" required />
-    <select id="estado" required>
-      <option value="">Estado</option>
-      <option value="Programado">Programado</option>
-      <option value="Retrasado">Retrasado</option>
-      <option value="Cancelado">Cancelado</option>
-    </select>
-    <button type="submit">Agregar / Actualizar Vuelo</button>
-  </form>
+  <main>
+    <div class="form-container">
+      <h2>Registro de Vuelos</h2>
+      <form id="formVuelo">
+        <input type="hidden" id="indexEditar" />
+        <input type="text" id="numero" placeholder="Número de vuelo" required />
+        <input type="text" id="origen" placeholder="Origen" required />
+        <input type="text" id="destino" placeholder="Destino" required />
+        <input type="date" id="fechaSalida" required />
+        <input type="time" id="horaSalida" required />
+        <input type="date" id="fechaLlegada" required />
+        <input type="time" id="horaLlegada" required />
+        <input type="text" id="aerolinea" placeholder="Aerolínea" required />
+        <select id="estado" required>
+          <option value="">Estado</option>
+          <option value="Programado">Programado</option>
+          <option value="Retrasado">Retrasado</option>
+          <option value="Cancelado">Cancelado</option>
+        </select>
+        <button type="submit">Agregar / Actualizar Vuelo</button>
+      </form>
+    </div>
 
-  <table>
-    <thead>
-      <tr>
-        <th>Número</th>
-        <th>Origen</th>
-        <th>Destino</th>
-        <th>Salida</th>
-        <th>Llegada</th>
-        <th>Aerolínea</th>
-        <th>Estado</th>
-        <th>Acciones</th>
-      </tr>
-    </thead>
-    <tbody id="tablaVuelos"></tbody>
-  </table>
+    <div class="table-container">
+      <h2>Listado de Vuelos</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>Número</th>
+            <th>Origen</th>
+            <th>Destino</th>
+            <th>Salida</th>
+            <th>Llegada</th>
+            <th>Aerolínea</th>
+            <th>Estado</th>
+            <th>Acciones</th>
+          </tr>
+        </thead>
+        <tbody id="tablaVuelos"></tbody>
+      </table>
+    </div>
+  </main>
+
+  <footer>
+    <p>Sistema de Gestión de Vuelos &copy; 2023</p>
+  </footer>
 
   <script>
     const vuelos = [];
