--- a/pasajeros.html
+++ b/pasajeros.html
@@ -9,7 +9,7 @@
     <style>
       body {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        background-color: #f5f7fa;
+        background-color: #cfa9d6;
         margin: 0;
         padding: 20px;
       }
@@ -52,7 +52,7 @@
       input[type="text"]:focus,
       input[type="email"]:focus,
       input[type="datetime-local"]:focus {
-        border-color: #e05e08;
+        border-color: #e00874;
         outline: none;
       }
 
@@ -62,7 +62,7 @@
       }
 
       button {
-        background-color: #1048af;
+        background-color: #66095e;
         color: white;
         padding: 10px 18px;
         margin-top: 20px;
@@ -119,49 +119,71 @@
         color: #87b6df;
         transform: scale(1.2);
       }
+
+      .row {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      margin-bottom: 20px;
+      }
+
+      .col {
+        flex: 1;
+        min-width: 200px;
+      }
+
     </style>
 
 </head>
 <body>
     <div>
       <h1>Registro de Pasajeros</h1>
+      <div class="row">
+        <div class="col">
+          <label for="nombre">Nombre:</label>
+          <input type="text" id="nombre" name="nombre" placeholder="Ingrese su nombre"/>
+        </div>
+        <div class="col">
+          <label for="apellido">Apellido:</label>
+          <input type="text" id="apellido" name="apellido" placeholder="Ingrese su apellido"/>
+        </div>
+      </div>
 
-      <label for="nombre">Nombre:</label>
-      <input type="text" id="nombre" name="nombre"/>
-      <br><br>
+      <div class="row">
+        <div class="col">
+          <label for="nombre">Numero de Pasaporte:</label>
+          <input type="text" id="npasaporte" name="npasaporte" placeholder="Ingrese su número de pasaporte"/>
+        </div>
+        <div class="col">
+          <label for="fecha_nacimiento">Fecha de Nacimiento:</label>
+          <input type="datetime-local" id="fecha_nacimiento" name="fecha_nacimiento"/>
+        </div>
+      </div>
 
-      <label for="apellido">Apellido:</label>
-      <input type="text" id="apellido" name="apellido"/>
-      <br><br>
+      <div class="row">
+        <div class="col">
+          <label for="genero">Genero:</label>
+          <label for="masculino">Masculino</label>
+          <input type="radio" id="masculino" name="genero" value="Masculino"/>
+          <label for="femenino">Femenino</label>
+          <input type="radio" id="femenino" name="genero" value="Femenino"/>
+        </div>
+        <div class="col">
+          <label for="correo">Correo Electronico:</label>
+          <input type="text" id="correo" name="correo"/>
+        </div>
+      </div>
 
-      <label for="npasaporte">Número de Pasaporte:</label>
-      <input type="text" id="npasaporte" name="npasaporte"/>
-      <br><br>
-
-      <label for="fecha_nacimiento">Fecha de Nacimiento:</label>
-      <input type="datetime-local" id="fecha_nacimiento" name="fecha_nacimiento"/>
-      <br><br>
-
-      <label for="genero">Genero:</label>
-      <br>
-
-      <input type="radio" id="masculino" name="genero" value="Masculino" />
-      <label for="masculino">Masculino</label>
-      <input type="radio" id="femenino" name="genero" value="Femenino" />
-      <label for="femenino">Femenino</label>
-
-      <br><br>
-      <label for="correo">Correo Electronico:</label>
-      <input type="email" id="correo" name="correo" />
-      <br><br>
-
-      <label for="telefono">Numero Telefonico:</label>
-      <input type="text" id="telefono" name="telefono" />
-      <br>
-
-      <label for="cemergencia">Contacto de Emergencia:</label>
-      <input type="text" id="cemergencia" name="cemergencia" />
-      <br>
+      <div class="row">
+        <div class="col">
+          <label for="telefono">Numero Telefonico:</label>
+          <input type="text" id="telefono" name="telefono" placeholder="Ingrese su número de telefono"/>
+        </div>
+        <div class="col">
+          <label for="cemergencia">Contacto de Emergencia:</label>
+          <input type="text" id="cemergencia" name="cemergencia" placeholder="Ingrese su contacto de emergencia"/>
+        </div>
+      </div>
 
       <div class="botones-centrados">
         <button onclick="agregarFila()">Agregar a la tabla</button>
