arreglando unas cosas

--- a/vuelos.html
+++ b/vuelos.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body class="has-navbar">
-    <!-- Menú de navegación -->
+    <!-- Menu para poder moverse entre las paginas -->
     <nav class="navbar">
         <a href="index.html" class="navbar-brand">
             <i class="fas fa-plane"></i>
@@ -97,7 +97,7 @@
     </footer>
 
     <script>
-        // Tu código JavaScript existente aquí
+        //empieza el java
         const vuelos = [];
         const form = document.getElementById('formVuelo');
         const tabla = document.getElementById('tablaVuelos');
