--- a/vuelos.html
+++ b/vuelos.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestión de Vuelos | SistemaAéreo</title>
+    <!-- En el <head> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="CSS/estilos.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body class="has-navbar">
     <!-- Menu para poder moverse entre las paginas -->
@@ -49,27 +50,75 @@
     </nav>
 
     <main>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
         <div class="form-container">
             <h2>Registro de Vuelos</h2>
             <form id="formVuelo">
                 <input type="hidden" id="indexEditar">
-                <input type="text" id="numero" placeholder="Número de vuelo" required>
-                <input type="text" id="origen" placeholder="Origen" required>
-                <input type="text" id="destino" placeholder="Destino" required>
-                <input type="date" id="fechaSalida" required>
-                <input type="time" id="horaSalida" required>
-                <input type="date" id="fechaLlegada" required>
-                <input type="time" id="horaLlegada" required>
-                <input type="text" id="aerolinea" placeholder="Aerolínea" required>
-                <select id="estado" required>
-                    <option value="">Estado</option>
-                    <option value="Programado">Programado</option>
-                    <option value="Retrasado">Retrasado</option>
-                    <option value="Cancelado">Cancelado</option>
-                </select>
-                <button type="submit">Agregar / Actualizar Vuelo</button>
+
+                <div class="row g-3">
+                    <!-- Primera fila: Número, Origen, Destino -->
+                    <div class="col-md-4">
+                        <input type="text" id="numero" class="form-control" placeholder="Número de vuelo" required>
+                    </div>
+                    <div class="col-md-4">
+                        <input type="text" id="origen" class="form-control" placeholder="Origen" required>
+                    </div>
+                    <div class="col-md-4">
+                        <input type="text" id="destino" class="form-control" placeholder="Destino" required>
+                    </div>
+
+                    <!-- Segunda fila: Fecha y hora de salida -->
+                    <div class="col-md-6">
+                        <label for="fechaSalida" class="form-label">Fecha de Partida</label>
+                        <input type="date" id="fechaSalida" class="form-control" required>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="horaSalida" class="form-label">Hora de Partida</label>
+                        <input type="time" id="horaSalida" class="form-control" required>
+                    </div>
+
+                    <!-- Tercera fila: Fecha y hora de llegada -->
+                    <div class="col-md-6">
+                        <label for="fechaLlegada" class="form-label">Fecha de Llegada</label>
+                        <input type="date" id="fechaLlegada" class="form-control" required>
+                    </div>
+                    <div class="col-md-6">
+                        <label for="horaLlegada" class="form-label">Hora de Llegada</label>
+                        <input type="time" id="horaLlegada" class="form-control" required>
+                    </div>
+
+                    <!-- Aerolínea como combo box -->
+                    <div class="col-md-6">
+                        <label for="aerolinea" class="form-label">Aerolínea</label>
+                        <select id="aerolinea" class="form-select" required>
+                            <option value="">Seleccione una aerolínea</option>
+                            <option value="AeroMéxico">AeroMéxico</option>
+                            <option value="LATAM">LATAM</option>
+                            <option value="Copa Airlines">Copa Airlines</option>
+                        </select>
+                    </div>
+
+                    <!-- Estado -->
+                    <div class="col-md-6">
+                        <label for="estado" class="form-label">Estado</label>
+                        <select id="estado" class="form-select" required>
+                            <option value="">Estado</option>
+                            <option value="Programado">Programado</option>
+                            <option value="Retrasado">Retrasado</option>
+                            <option value="Cancelado">Cancelado</option>
+                        </select>
+                    </div>
+
+                    <!-- Botón -->
+                    <div class="col-12">
+                        <button type="submit" class="btn btn-primary w-100">Agregar / Actualizar Vuelo</button>
+                    </div>
+                </div>
             </form>
         </div>
+
 
         <div class="table-container">
             <h2>Listado de Vuelos</h2>
@@ -103,7 +152,7 @@
         const tabla = document.getElementById('tablaVuelos');
         const indexEditar = document.getElementById('indexEditar');
 
-        function renderizarTabla() {
+        function Tabla() {
             tabla.innerHTML = '';
             vuelos.forEach((v, i) => {
                 tabla.innerHTML += `
@@ -146,7 +195,7 @@
             }
 
             form.reset();
-            renderizarTabla();
+            Tabla();
         });
 
         function editar(i) {
@@ -166,11 +215,11 @@
         function eliminar(i) {
             if (confirm('¿Eliminar este vuelo?')) {
                 vuelos.splice(i, 1);
-                renderizarTabla();
+                Tabla();
             }
         }
 
-        renderizarTabla();
+        Tabla();
     </script>
 </body>
 </html>
